@@ -31,6 +31,30 @@ name|VfsRepository
 import|;
 end_import
 
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|regex
+operator|.
+name|Matcher
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|regex
+operator|.
+name|Pattern
+import|;
+end_import
+
 begin_comment
 comment|/**  * @author S. Nesbitt  *  */
 end_comment
@@ -42,6 +66,25 @@ name|VfsResolver
 extends|extends
 name|RepositoryResolver
 block|{
+specifier|private
+specifier|static
+name|Pattern
+name|URLPattern
+init|=
+name|Pattern
+operator|.
+name|compile
+argument_list|(
+literal|"[a-z]*://(.+):(.+)@.*"
+argument_list|)
+decl_stmt|;
+specifier|private
+specifier|static
+name|int
+name|PASSWORD_GROUP
+init|=
+literal|2
+decl_stmt|;
 specifier|public
 name|VfsResolver
 parameter_list|()
@@ -61,6 +104,150 @@ parameter_list|()
 block|{
 return|return
 literal|"vfs"
+return|;
+block|}
+specifier|public
+name|String
+name|hidePassword
+parameter_list|(
+name|String
+name|name
+parameter_list|)
+block|{
+return|return
+name|prepareForDisplay
+argument_list|(
+name|name
+argument_list|)
+return|;
+block|}
+specifier|public
+specifier|static
+name|String
+name|prepareForDisplay
+parameter_list|(
+name|String
+name|name
+parameter_list|)
+block|{
+name|StringBuffer
+name|s
+init|=
+operator|new
+name|StringBuffer
+argument_list|(
+name|name
+argument_list|)
+decl_stmt|;
+name|Matcher
+name|m
+init|=
+name|URLPattern
+operator|.
+name|matcher
+argument_list|(
+name|s
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|m
+operator|.
+name|matches
+argument_list|()
+condition|)
+block|{
+specifier|final
+name|String
+name|password
+init|=
+name|m
+operator|.
+name|group
+argument_list|(
+name|PASSWORD_GROUP
+argument_list|)
+decl_stmt|;
+specifier|final
+name|int
+name|passwordposi
+init|=
+name|s
+operator|.
+name|indexOf
+argument_list|(
+name|password
+argument_list|)
+decl_stmt|;
+name|StringBuffer
+name|stars
+init|=
+operator|new
+name|StringBuffer
+argument_list|(
+name|password
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|int
+name|posi
+init|=
+literal|0
+init|;
+name|posi
+operator|<
+name|password
+operator|.
+name|length
+argument_list|()
+condition|;
+name|posi
+operator|++
+control|)
+block|{
+name|stars
+operator|.
+name|setCharAt
+argument_list|(
+name|posi
+argument_list|,
+literal|'*'
+argument_list|)
+expr_stmt|;
+block|}
+name|String
+name|replacement
+init|=
+name|stars
+operator|.
+name|toString
+argument_list|()
+decl_stmt|;
+name|s
+operator|=
+name|s
+operator|.
+name|replace
+argument_list|(
+name|passwordposi
+argument_list|,
+name|passwordposi
+operator|+
+name|password
+operator|.
+name|length
+argument_list|()
+argument_list|,
+name|replacement
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|s
+operator|.
+name|toString
+argument_list|()
 return|;
 block|}
 block|}
