@@ -88,6 +88,7 @@ Changes:
   - FIX: Ant log messsages not embedded in task log (IVY-280) (thanks to Gilles Scokart)
   - FIX: Ivy fails when downloading from a server that supports NTLM authentication (IVY-213) (thanks to Damon Rand)
   - FIX: Delivered Ivy files with incomplete last line. (IVY-125) (thanks to Matthias Kilian)
+  - FIX: the vfs resolver should not log passwords (IVY-292) (thanks to Antoine Levy-Lambert)
 
 * thanks to Maarten Coene:
   - NEW: Add type filtering to retrieve task (IVY-260)
